# vowel

./: .env.sample  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  FAILURE_MRE.md  Makefile  README.md  costs.yml  db.py  db.yml  db_fixture.yml  example.yml  pyproject.toml  pyrightconfig.json  vowel-schema.json
.github/workflows/: evals.yml  format.yml  tests.yml
docs/: AI_GENERATION.md  API.md  CLI.md  CODEMODE.md  EVALUATORS.md  FEEDBACK_GUIDED_EXPLORATION.md  FIXTURES.md  FIXTURE_GENERATION_RFC.md  MCP.md  MONTY_RESEARCH.md  README.md  SERIALIZERS.md  TROUBLESHOOTING.md  USERGUIDE.md  YAML_SPEC.md
examples/: README.md  functions.py  test_raises.yml  test_raises_reordered.yml
examples/ai_generation/: run.py
examples/basic_usage/: evals.yml  functions.py  run.py
examples/db_fixtures/: db.py
examples/evals/: builtins.yml  functions.py  math.yml  strings.yml  validation.yml
examples/evaluators/: evals.yml  functions.py  run.py
examples/fixtures/: evals.yml  functions.py  run.py
examples/fluent_api/: evals.yml  run.py
examples/serializers/: __init__.py  app.py  db_query_evals.yml  defn.py  fixtures.py
quality-judge/: evals.py  largestPathValue_evals.yml  largest_color_value_judge.yml  runner.py
src/vowel/: __init__.py  ai.py  cli.py  codemode.py  context.py  costs.py  errors.py  eval_types.py  evals.py  executor.py  mcp_server.py  monitoring.py  runner.py  schema.py  spec_validation.py  tdd.py  utils.py  validation.py
tests/: conftest.py  test_async_functions.py  test_case_level_type.py  test_class_methods.py  test_cli.py  test_cli_watch.py  test_eval_generator.py  test_eval_summary.py  test_evaluators.py  test_executor.py  test_expected_null.py  test_fixtures.py  test_function_class.py  test_generation.py  test_generator_fixture.py  test_import_function.py  test_input_handling.py  test_llm_integration.py  test_llm_judge.py  test_llm_judge_env_refs.py  test_run_evals.py  test_schema.py  test_serializer.py  test_session.py  test_tdd_eval_retries.py  test_type_compatibility.py  test_validate_spec.py  test_yaml_loading.py
tests/cassettes/: llm_judge_combined_assertion.json  llm_judge_combined_type.json  llm_judge_custom_model.json  llm_judge_empty_output.json  llm_judge_include_expected.json  llm_judge_long_input.json  llm_judge_quality_check.json  llm_judge_simple_rubric.json  test_complex_types.json  test_generate_and_run.json  test_generate_factorial.json  test_generate_palindrome.json  test_generate_spec_simple.json  test_generate_spec_string.json  test_with_context.json
